# rust

piscine-rust/: Cargo.toml
piscine-rust/arrange_it/src/: lib.rs  main.rs
piscine-rust/arrays/src/: main.rs
piscine-rust/banner/src/: lib.rs  main.rs
piscine-rust/bigger/src/: lib.rs
piscine-rust/borrow/borrow_run/: Cargo.toml
piscine-rust/borrow_me_the_reference/src/: lib.rs
piscine-rust/borrow_me_the_reference_run/: Cargo.toml
piscine-rust/borrow_me_the_reference_run/src/: main.rs
piscine-rust/borrow_run/: Cargo.toml
piscine-rust/borrow_run/src/: main.rs
piscine-rust/capitalizing/src/: lib.rs  main.rs
piscine-rust/card_deck/: Cargo.toml
piscine-rust/card_deck/src/: lib.rs
piscine-rust/changes/src/: lib.rs
piscine-rust/cipher/src/: lib.rs
piscine-rust/circle/src/: lib.rs  main.rs
piscine-rust/collect/src/: lib.rs
piscine-rust/copy/src/: lib.rs
piscine-rust/copy_run/: Cargo.toml
piscine-rust/division_and_remainder/src/: lib.rs
piscine-rust/does_it_fit/src/: lib.rs
piscine-rust/doubtful/src/: lib.rs
piscine-rust/doubtful_run/: Cargo.toml
piscine-rust/edit_distance/src/: lib.rs
piscine-rust/error_types/src/: lib.rs
piscine-rust/fib_run/: Cargo.toml
piscine-rust/fibonacci2/src/: lib.rs
piscine-rust/find_factorial/src/: lib.rs
piscine-rust/groceries/src/: lib.rs
piscine-rust/handling/src/: lib.rs
piscine-rust/hashing/src/: lib.rs
piscine-rust/looping/src/: main  main.rs
piscine-rust/matrix_transposition/src/: lib.rs
piscine-rust/middle_day/src/: lib.rs
piscine-rust/name_initials/src/: lib.rs
piscine-rust/name_initials_run/: Cargo.toml
piscine-rust/ownership/src/: lib.rs
piscine-rust/ownership_run/: Cargo.toml
piscine-rust/panic/src/: lib.rs
piscine-rust/profanity_filter/src/: lib.rs  main.rs
piscine-rust/reverse_string/src/: lib.rs
piscine-rust/run_string_literals/: Cargo.toml
piscine-rust/src/: main.rs
piscine-rust/to_url_run/: Cargo.toml
(+16 files in other folders)
