[workspace]
members = ["scalar","temperature_conv",".", "speed_transformation",
    "looping", "groceries", "reverse_string", "find_factorial", "fibonacci2",
    "matrix_transposition", "division_and_remainder",
    "tuples_refs", "doubtful", "to_url", "string_literals", "middle_day", "does_it_fit"]
[package]
name = "piscine-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
scalar = {path="scalar"}
temperature_conv = {path="temperature_conv"}
speed_transformation = {path="speed_transformation"}
groceries = {path="groceries"}
reverse_string = {path="reverse_string"}
find_factorial = {path="find_factorial"}
fibonacci2 = {path="fibonacci2"}
matrix_transposition={path="matrix_transposition"}
division_and_remainder = {path="division_and_remainder"}
tuples_refs = {path="tuples_refs"}
